--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0"
   }
